--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-/* Navigation Bar Styling */
+/* Font import */
+@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@400;700;900&display=swap');
 
+/* Navigation Bar Styling */
 .topnav {
     font-weight: bold;
     list-style-type: none;
-    margin: 0;
-    padding: 0;
     overflow: hidden;
 }
 
@@ -24,49 +24,70 @@
     color: #dddddd;
 }
 
+.hover-underline-animation {
+    display: inline-block;
+    position: relative;
+    color: #3E7CB6;
+}
+
+.hover-underline-animation::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #0087ca;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.hover-underline-animation:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
 body {
-    background-color: black;
+    background-color: #171C26;
     color: white;
     margin-left: 10%;
     margin-right: 10%;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    font-family: 'Catamaran', sans-serif;
+}
+
+h1 {
+    font-weight: 900;
+    color: #3E7CB6;
+}
+
+.title {
+    font-size: 85px;
+}
+
+.subtitle {
+    font-size: 50px;
 }
 
 .content {
     margin-top: 10%;
 }
 
-.content p {
-}
-
-.content a {
+a {
     color: white;
-}
-
-
-
-.module {
-/*    width: 60vw;*/
-}
-
-.module h4 {
-    font-weight: 500;
-    line-height: 0px;
 }
 
 .module .project-attributes {
     font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
-/*    font-size: 1.3vw;*/
 }
 
 .module .links a {
     display: inline-block;
     color: white;
-/*    font-size: 1.2vw;*/
     text-decoration: underline;
 }
 
-.module .links a:hover {
+a:hover {
     color: #dddddd;
 }
 
@@ -94,4 +115,8 @@ body {
 
 footer {
     font-size: 15px;
+}
+
+#projects {
+    scroll-behavior: smooth;
 }
