--- a/style.css
+++ b/style.css
@@ -32,6 +32,22 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
+button {
+    outline: none;
+    border:none;
+    cursor: pointer;
+    width:100%;
+    height: 100%;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 700;
+    font-family: 'Lato', sans-serif;
+    color: black;
+    text-align: center;
+    background: white;
+    transition: 0.5s;
+}
+
 .content {
     font-size: 2vw;
     margin-top: 10%;
@@ -49,6 +65,10 @@ body {
     font-size: 1.4vw;
 }
 
+.content-center {
+    text-align: center;
+}
+
 .confetti-button {
     outline: none;
     border:none;
@@ -64,6 +84,7 @@ body {
     background: white;
     transition: 0.5s;
 }
+
 .confetti-button:hover {
     background: #e0e0e0;
 }
@@ -74,6 +95,7 @@ body {
     position: relative;
     width:200px;
     height:60px;
+    margin: 0 auto;
 }
 .button-wrapper canvas {
     position: absolute;
